# dam-experiments

./: .gitmodules
attention/: Cargo.toml
attention/src/: main.rs  utils.rs
attention/src/apps/: agnostic.rs  mod.rs  naive.rs
attention/src/templates/: flatmap.rs  map.rs  matmul.rs  mod.rs  reduce.rs  repeat.rs  scan.rs  types.rs  zip.rs
