[package]
name = "attention"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dam = { git = "https://github.com/stanford-ppl/DAM-RS.git", branch = "spsc", default-features = false, features = ["coroutines"]}
fastrand = "2.0.1"
itertools = "0.12.1"
ndarray = "0.15.6"
num = "0.4.1"
